change task names to title case

--- a/linux_os/guide/system/accounts/accounts-physical/screen_locking/console_screen_locking/configure_bashrc_exec_tmux/ansible/shared.yml
+++ b/linux_os/guide/system/accounts/accounts-physical/screen_locking/console_screen_locking/configure_bashrc_exec_tmux/ansible/shared.yml
@@ -4,21 +4,21 @@
 # complexity = low
 # disruption = low
 
-- name: "{{{ rule_title }}}: Determine if the Tmux launch script is present in /etc/bashrc"
+- name: "{{{ rule_title }}}: Determine If the Tmux Launch Script Is Present in /etc/bashrc"
   ansible.builtin.find:
     paths: '/etc'
     patterns: 'bashrc'
     contains: '.*case "$name" in sshd|login) exec tmux ;; esac.*'
   register: tmux_in_bashrc
 
-- name: "{{{ rule_title }}}: Determine if the Tmux launch script is present in /etc/profile.d/*.sh"
+- name: "{{{ rule_title }}}: Determine If the Tmux Launch Script Is Present in /etc/profile.d/*.sh"
   ansible.builtin.find:
     paths: '/etc/profile.d'
     patterns: '*.sh'
     contains: .*case "$name" in sshd|login) exec tmux ;; esac.*
   register: tmux_in_profile_d
 
-- name: "{{{ rule_title }}}: Insert the correct script into /etc/profile.d/tmux.sh"
+- name: "{{{ rule_title }}}: Insert the Correct Script into /etc/profile.d/tmux.sh"
   ansible.builtin.blockinfile:
     path: '/etc/profile.d/tmux.sh'
     block: |
