OCP4: Add a new rule that checks that the IdP is either LDAP or OIDC
The OCP4 STIG only allows two identity providers - LDAP or OIDC. Add a
new rule that checks for only these two types with the appropriate check
and fix text and OCIL.

Remove the old policy file from the generic idp_is_configured to make it
easier to catch the rule if it was used by accident.

Use the new rule across OCP4 STIG.

--- a/controls/srg_ctr/SRG-APP-000024-CTR-000060.yml
+++ b/controls/srg_ctr/SRG-APP-000024-CTR-000060.yml
@@ -5,8 +5,5 @@ controls:
   title: {{{ full_name }}} must automatically remove or disable temporary user
     accounts after 72 hours.
   rules:
-  - idp_is_configured
-  - ocp_idp_no_htpasswd
-  - kubeadmin_removed
-  - ocp_no_ldap_insecure
+  - idp_is_oidc_or_ldap
   status: automated
