--- a/controls/srg_ctr/SRG-APP-000177-CTR-000465.yml
+++ b/controls/srg_ctr/SRG-APP-000177-CTR-000465.yml
@@ -6,7 +6,5 @@ controls:
     user or group account for PKI-based authentication.
   status: not applicable
   rules:
-  - ocp_idp_no_htpasswd
-  - idp_is_configured
-  - kubeadmin_removed
+  - idp_is_oidc_or_ldap
   status: automated
