--- a/controls/srg_ctr/SRG-APP-000025-CTR-000065.yml
+++ b/controls/srg_ctr/SRG-APP-000025-CTR-000065.yml
@@ -5,8 +5,5 @@ controls:
   title: {{{ full_name }}} must automatically disable accounts after a 35-day
     period of account inactivity.
   rules:
-  - idp_is_configured
-  - ocp_idp_no_htpasswd
-  - kubeadmin_removed
-  - ocp_no_ldap_insecure
+  - idp_is_oidc_or_ldap
   status: automated
