--- a/controls/srg_ctr/SRG-APP-000065-CTR-000115.yml
+++ b/controls/srg_ctr/SRG-APP-000065-CTR-000115.yml
@@ -5,8 +5,5 @@ controls:
   title: {{{ full_name }}} must enforce the limit of three consecutive invalid
     logon attempts by a user during a 15-minute time period.
   rules:
-  - idp_is_configured
-  - ocp_idp_no_htpasswd
-  - kubeadmin_removed
-  - ocp_no_ldap_insecure
+  - idp_is_oidc_or_ldap
   status: automated
