--- a/controls/srg_ctr/SRG-APP-000152-CTR-000370.yml
+++ b/controls/srg_ctr/SRG-APP-000152-CTR-000370.yml
@@ -5,7 +5,5 @@ controls:
   title: {{{ full_name }}} must use multifactor authentication for local access
     to non-privileged accounts.
   rules:
-  - ocp_idp_no_htpasswd
-  - idp_is_configured
-  - kubeadmin_removed
+  - idp_is_oidc_or_ldap
   status: automated
