--- a/controls/srg_ctr/SRG-APP-000156-CTR-000380.yml
+++ b/controls/srg_ctr/SRG-APP-000156-CTR-000380.yml
@@ -6,7 +6,5 @@ controls:
     to provide replay-resistant authentication mechanisms for network access to privileged
     accounts.
   rules:
-  - ocp_idp_no_htpasswd
-  - idp_is_configured
-  - kubeadmin_removed
+  - idp_is_oidc_or_ldap
   status: automated
