--- a/controls/srg_ctr/SRG-APP-000157-CTR-000385.yml
+++ b/controls/srg_ctr/SRG-APP-000157-CTR-000385.yml
@@ -5,7 +5,5 @@ controls:
   title: {{{ full_name }}} must implement replay-resistant authentication mechanisms
     for network access to non-privileged accounts.
   rules:
-  - ocp_idp_no_htpasswd
-  - idp_is_configured
-  - kubeadmin_removed
+  - idp_is_oidc_or_ldap
   status: automated
