--- a/controls/srg_ctr/SRG-APP-000163-CTR-000395.yml
+++ b/controls/srg_ctr/SRG-APP-000163-CTR-000395.yml
@@ -5,7 +5,5 @@ controls:
   title: {{{ full_name }}} must disable identifiers (individuals, groups, roles,
     and devices) after 35 days of inactivity.
   rules:
-  - ocp_idp_no_htpasswd
-  - idp_is_configured
-  - kubeadmin_removed
+  - idp_is_oidc_or_ldap
   status: automated
