--- a/controls/srg_ctr/SRG-APP-000174-CTR-000450.yml
+++ b/controls/srg_ctr/SRG-APP-000174-CTR-000450.yml
@@ -4,7 +4,5 @@ controls:
   - medium
   title: {{{ full_name }}} must enforce a 60-day maximum password lifetime restriction.
   rules:
-  - ocp_idp_no_htpasswd
-  - idp_is_configured
-  - kubeadmin_removed
+  - idp_is_oidc_or_ldap
   status: automated
