--- a/controls/srg_ctr/SRG-APP-000318-CTR-000740.yml
+++ b/controls/srg_ctr/SRG-APP-000318-CTR-000740.yml
@@ -5,7 +5,5 @@ controls:
   title: {{{ full_name }}} must enforce organization-defined circumstances and/or
     usage conditions for organization-defined accounts.
   rules:
-  - ocp_idp_no_htpasswd
-  - idp_is_configured
-  - kubeadmin_removed
+  - idp_is_oidc_or_ldap
   status: automated
