--- a/controls/srg_ctr/SRG-APP-000402-CTR-000970.yml
+++ b/controls/srg_ctr/SRG-APP-000402-CTR-000970.yml
@@ -5,7 +5,5 @@ controls:
   title: {{{ full_name }}} must accept Personal Identity Verification (PIV) credentials
     from other federal agencies.
   rules:
-  - ocp_idp_no_htpasswd
-  - idp_is_configured
-  - kubeadmin_removed
+  - idp_is_oidc_or_ldap
   status: automated
