Update CIS control files for RHEL8 and RHEL9
The 4.2.1.7 requirement is now automated.

--- a/controls/cis_rhel9.yml
+++ b/controls/cis_rhel9.yml
@@ -1598,10 +1598,9 @@ controls:
     levels:
       - l1_server
       - l1_workstation
-    status: partial
+    status: automated
     rules:
       - rsyslog_nolisten
-      # This rule should be extended to consider rainerscript syntax
 
   - id: 4.2.2.1.1
     title:  Ensure systemd-journal-remote is installed (Manual)
