--- a/linux_os/guide/system/software/integrity/software-integrity/aide/aide_scan_notification/rule.yml
+++ b/linux_os/guide/system/software/integrity/software-integrity/aide/aide_scan_notification/rule.yml
@@ -51,6 +51,7 @@ references:
     stigid@rhel7: RHEL-07-020040
     stigid@rhel8: RHEL-08-010360
     stigid@sle12: SLES-12-010510
+    stigid@sle15: SLES-15-010570
 
 ocil_clause: 'AIDE has not been configured or has not been configured to notify personnel of scan details'
 
