--- a/linux_os/guide/system/software/integrity/software-integrity/aide/aide_build_database/rule.yml
+++ b/linux_os/guide/system/software/integrity/software-integrity/aide/aide_build_database/rule.yml
@@ -68,6 +68,8 @@ references:
     stigid@ol8: OL08-00-010359
     stigid@rhel7: RHEL-07-020029
     stigid@rhel8: RHEL-08-010359
+    stigid@sle12: SLES-12-010499
+    stigid@sle15: SLES-15-010419
 
 ocil_clause: 'there is no database file'
 
