--- a/linux_os/guide/system/permissions/restrictions/sysctl_kernel_dmesg_restrict/rule.yml
+++ b/linux_os/guide/system/permissions/restrictions/sysctl_kernel_dmesg_restrict/rule.yml
@@ -31,6 +31,8 @@ references:
     stigid@ol8: OL08-00-010375
     stigid@rhel7: RHEL-07-010375
     stigid@rhel8: RHEL-08-010375
+    stigid@sle12: SLES-12-010375
+    stigid@sle15: SLES-15-010375
 
 {{{ complete_ocil_entry_sysctl_option_value(sysctl="kernel.dmesg_restrict", value="1") }}}
 
