--- a/linux_os/guide/system/software/integrity/software-integrity/aide/aide_periodic_cron_checking/ansible/shared.yml
+++ b/linux_os/guide/system/software/integrity/software-integrity/aide/aide_periodic_cron_checking/ansible/shared.yml
@@ -3,12 +3,8 @@
 # strategy = restrict
 # complexity = low
 # disruption = low
-- name: "Ensure AIDE is installed"
-  package:
-    name:
-      - aide
-      - crontabs
-    state: present
+
+{{{ ansible_package_install(['aide', 'crontabs'], name="AIDE") }}}
 
 - name: Set cron package name - RedHat
   set_fact:
