--- a/linux_os/guide/system/software/integrity/software-integrity/aide/aide_scan_notification/ansible/shared.yml
+++ b/linux_os/guide/system/software/integrity/software-integrity/aide/aide_scan_notification/ansible/shared.yml
@@ -5,12 +5,7 @@
 # disruption = low
 - (xccdf-var var_aide_scan_notification_email)
 
-- name: "Ensure AIDE is installed"
-  package:
-    name:
-      - aide
-      - crontabs
-    state: present
+{{{ ansible_package_install(['aide', 'crontabs'], name="AIDE") }}}
 
 - name: "{{{ rule_title }}}"
   cron:
