--- a/tests/unit/ssg-module/data/properties/00-default.yml
+++ b/tests/unit/ssg-module/data/properties/00-default.yml
@@ -1,8 +1,9 @@
 
-- property_one: one
+default:
+  property_one: one
 
-{{% if product == "rhel7" %}}
-- rhel_version: "seven"
-{{% else %}}
-- rhel_version: "not_seven"
+{{%- if product == "rhel7" %}}
+  rhel_version: "seven"
+{{%- else %}}
+  rhel_version: "not_seven"
 {{% endif %}}
