--- a/tests/unit/ssg-module/data/properties/10-property_two.yml
+++ b/tests/unit/ssg-module/data/properties/10-property_two.yml
@@ -1,6 +1,8 @@
+default:
+  property_two: one
+
+overrides:
 {{% if property_one == "one" %}}
-- property_two: two
-{{% else %}}
-- property_two: one
+  property_two: two
 {{% endif %}}
 
