--- a/controls/cis_rhel8.yml
+++ b/controls/cis_rhel8.yml
@@ -1209,14 +1209,25 @@ controls:
       - var_nftables_family=inet
       - var_nftables_table=filter
 
-  # NEEDS RULE
-  # https://github.com/ComplianceAsCode/content/issues/5245
   - id: 3.4.2.6
     title: Ensure nftables base chains exist (Automated)
     levels:
       - l1_server
       - l1_workstation
-    status: pending
+    status: supported
+    notes: |-
+      RHEL systems use firewalld for firewall management. Although nftables is the default
+      back-end for firewalld, it is not recommended to use nftables directly when firewalld
+      is in use. When using firewalld the base chains are installed by default.
+    related_rules:
+      - set_nftables_base_chain
+      - var_nftables_table=firewalld
+      - var_nftables_family=inet
+      - var_nftables_base_chain_names=chain_names
+      - var_nftables_base_chain_types=chain_types
+      - var_nftables_base_chain_hooks=chain_hooks
+      - var_nftables_base_chain_priorities=chain_priorities
+      - var_nftables_base_chain_policies=chain_policies
 
   # NEEDS RULE
   # https://github.com/ComplianceAsCode/content/issues/5246
