SRG-APP-000023-CTR-000055: Solved by both IDP set to LDAP or OIDC and removing kubeadmin

--- a/controls/srg_ctr/SRG-APP-000023-CTR-000055.yml
+++ b/controls/srg_ctr/SRG-APP-000023-CTR-000055.yml
@@ -5,8 +5,6 @@ controls:
   title: {{{ full_name }}} must use a centralized user management solution to
     support account management functions.
   rules:
-  - idp_is_configured
-  - ocp_idp_no_htpasswd
+  - idp_is_oidc_or_ldap
   - kubeadmin_removed
-  - ocp_no_ldap_insecure
   status: automated
