OCP4 STIG: Substitute idp_is_configured for idp_is_oidc_or_ldap in related_rules of all OCP4 controls
To avoid confusio and make git grep easier, let's also not use the rule
idp_is_configured in related_rules of OCP4 STIG controls, but let's use
the new rule idp_is_oidc_or_ldap instead.

--- a/controls/srg_ctr/SRG-APP-000026-CTR-000070.yml
+++ b/controls/srg_ctr/SRG-APP-000026-CTR-000070.yml
@@ -7,6 +7,8 @@ controls:
   rules:
   - audit_rules_sysadmin_actions
   - audit_rules_usergroup_modification
+  related_rules:
+  - idp_is_oidc_or_ldap
   check: |-
     Verify  Red Hat Enterprise Linux CoreOS (RHCOS) generates audit records for all account creations, modifications, disabling, and termination events that affect "/etc/shadow".
 
