--- a/controls/srg_ctr/SRG-APP-000029-CTR-000085.yml
+++ b/controls/srg_ctr/SRG-APP-000029-CTR-000085.yml
@@ -4,7 +4,7 @@ controls:
   - medium
   title: {{{ full_name }}} must automatically audit account removal actions.
   related_rules:
-  - idp_is_configured
+  - idp_is_oidc_or_ldap
   - ocp_idp_no_htpasswd
   - kubeadmin_removed
   status: not applicable
