--- a/controls/srg_ctr/SRG-APP-000028-CTR-000080.yml
+++ b/controls/srg_ctr/SRG-APP-000028-CTR-000080.yml
@@ -4,7 +4,7 @@ controls:
   - medium
   title: {{{ full_name }}} must generate audit rules to capture account creation, modification, disabling, removal and enabling actions.
   related_rules:
-  - idp_is_configured
+  - idp_is_oidc_or_ldap
   - ocp_idp_no_htpasswd
   - kubeadmin_removed
   status: automated
