--- a/controls/srg_ctr/SRG-APP-000148-CTR-000340.yml
+++ b/controls/srg_ctr/SRG-APP-000148-CTR-000340.yml
@@ -5,7 +5,7 @@ controls:
   title: {{{ full_name }}} application program interface (API) must uniquely
     identify and authenticate users.
   related_rules:
-  - idp_is_configured
+  - idp_is_oidc_or_ldap
   - ocp_idp_no_htpasswd
   - kubeadmin_removed
   status: inherently met
