--- a/controls/srg_ctr/SRG-APP-000234-CTR-000590.yml
+++ b/controls/srg_ctr/SRG-APP-000234-CTR-000590.yml
@@ -5,7 +5,7 @@ controls:
   title: {{{ full_name }}} must never automatically remove or disable emergency
     accounts.
   related_rules:
-  - idp_is_configured
+  - idp_is_oidc_or_ldap
   - ocp_idp_no_htpasswd
   - kubeadmin_removed
   status: inherently met
