--- a/controls/srg_ctr/SRG-APP-000503-CTR-001275.yml
+++ b/controls/srg_ctr/SRG-APP-000503-CTR-001275.yml
@@ -5,7 +5,7 @@ controls:
   title: {{{ full_name }}} must generate audit records when successful/unsuccessful
     logon attempts occur.
   related_rules:
-  - idp_is_configured
+  - idp_is_oidc_or_ldap
   - ocp_idp_no_htpasswd
   - kubeadmin_removed
   status: not applicable
