--- a/controls/srg_ctr/SRG-APP-000506-CTR-001290.yml
+++ b/controls/srg_ctr/SRG-APP-000506-CTR-001290.yml
@@ -5,7 +5,7 @@ controls:
   title: {{{ full_name }}} must generate audit records when concurrent logons
     from different workstations and systems occur.
   related_rules:
-  - idp_is_configured
+  - idp_is_oidc_or_ldap
   - ocp_idp_no_htpasswd
   - kubeadmin_removed
   status: not applicable
