--- a/controls/cis_ocp_1_3_0/section-1.yml
+++ b/controls/cis_ocp_1_3_0/section-1.yml
@@ -329,8 +329,12 @@ controls:
     controls:
     - id: 1.3.1
       title: Ensure that garbage collection is configured as appropriate
-      status: pending
-      rules: []
+      status: partial
+      rules: [] 
+      tickets:
+        - https://issues.redhat.com/browse/CMP-1977
+      notes:  |-
+        Ticket 1977 explains why terminated_pod_gc_threshhold isn’t supported in OCP4, hence removing the same.
       level: level_1
     - id: 1.3.2
       title: Ensure that controller manager healthz endpoints are protected by RBAC
