--- a/linux_os/guide/services/ssh/ssh_server/sshd_use_approved_kex_ordered_stig/rule.yml
+++ b/linux_os/guide/services/ssh/ssh_server/sshd_use_approved_kex_ordered_stig/rule.yml
@@ -8,11 +8,15 @@
 {{% set path='/etc/ssh/sshd_config' %}}
 {{% set conf="KexAlgorithms ecdh-sha1-nistp256,ecdh-sha2-nistp384,ecdh-sha2-nistp521" ~
              ",diffie-hellman-group-exchange-sha256"  %}}
+{{% elif product in ['sle12','sle15'] %}}
+{{% set path='/etc/ssh/sshd_config' %}}
+{{% set conf="KexAlgorithms ecdh-sha2-nistp256,ecdh-sha2-nistp384,ecdh-sha2-nistp521" ~
+             ",diffie-hellman-group-exchange-sha256"  %}}
 {{% endif %}}
 
 documentation_complete: true
 
-prodtype: ol7,ol8,rhel7,rhel8
+prodtype: ol7,ol8,rhel7,rhel8,sle12,sle15
 
 title: 'Use Only FIPS 140-2 Validated Key Exchange Algorithms'
 
@@ -35,6 +39,8 @@ severity: medium
 identifiers:
     cce@rhel7: CCE-86061-9
     cce@rhel8: CCE-86059-3
+    cce@sle12: CCE-92336-7
+    cce@sle15: CCE-92505-7
 
 references:
     disa: CCI-001453
@@ -44,6 +50,8 @@ references:
     stigid@ol8: OL08-00-040342
     stigid@rhel7: RHEL-07-040712
     stigid@rhel8: RHEL-08-040342
+    stigid@sle12: SLES-12-030270
+    stigid@sle15: SLES-15-040450
 
 ocil_clause: 'KexAlgorithms option is commented out, contains non-approved algorithms, or the FIPS-approved algorithms are not in the exact order'
 
