change: cmake: change style to set indent 4
Set indent 4 in all:
- cmakelint
- editorconfig
- Style Guide

Selected 4 instead of 2 as most existing files use 4 as indent. Only
these somewhat external files used indent 2 / tab.
- cmake/CopyFiles.cmake
- cmake/FindPythonModule.cmake
- cmake/GNUInstallDirs.cmake

--- a/.editorconfig
+++ b/.editorconfig
@@ -19,3 +19,7 @@ max_line_length = 99
 [{**.yml, **.yaml, **.jinja}]
 indent_style = space
 indent_size = 4
+
+[{CMakeLists.txt,**.cmake}]
+indent_style = space
+indent_size = 4
