change: cmake: change style to not use extra spaces with commands

--- a/.cmakelintrc
+++ b/.cmakelintrc
@@ -1,1 +1,2 @@
-filter=-linelength,-whitespace/extra,-convention/filename,-package/consistency,-package/stdargs
+# project has long lines
+filter=-linelength
