fix: uid_min: use it in various cases
git grep -Pl 'generate_privileged_commands_rule.sh 1000' | xargs -r \
    sed --follow-symlinks -Ei 's/(generate_privileged_commands_rule.sh )1000/\1{{{ uid_min }}}/'

git grep -Pl 'awk.*\$3\s*(=|<|>|\&gt;|&lt;)=?\s*1000|useradd -u 1000' linux_os | xargs -r \
    sed --follow-symlinks -Ei 's/(awk.*\$3\s*==?\s*|awk.*\$3\s*<=?\s*|awk.*\$3\s*>=?\s*|awk.*\$3\s*&gt;=?\s*|awk.*\$3\s*&lt;=?\s*|useradd -u )1000/\1{{{ uid_min }}}/;s/\s+$//'

git grep -Pl 'UID.*(greater|less).*1000' linux_os | xargs -r \
    sed -Ei 's/(UID.*greater.*|UID.*less.*)1000/\1{{{ uid_min }}}/g'

git grep -l UID linux_os | xargs -r grep -l greater | xargs -r grep -l 1000 | xargs -r \
    sed -Ei 's/([^:])1000/\1{{{ uid_min }}}/g'

git grep -Pl 'pam_succeed_if.so .* 1000' linux_os/ | xargs -r \
    sed -Ei 's/(pam_succeed_if.so .* )1000/\1{{{ uid_min }}}/'

git grep -l /etc/login.defs linux_os | xargs -r grep -l UID | xargs -r grep -l 1000 | xargs -r \
    sed -Ei 's/1000/{{{ uid_min }}}/g'

--- a/linux_os/guide/system/accounts/accounts-restrictions/accounts_authorized_local_users/policy/stig/shared.yml
+++ b/linux_os/guide/system/accounts/accounts-restrictions/accounts_authorized_local_users/policy/stig/shared.yml
@@ -17,7 +17,7 @@ checktext: |-
     smithk:x:1000:1000:smithk:/home/smithk:/bin/bash
     throckw:x:1001:1001:throckw:/home/throckw:/bin/bash
 
-    Interactive user account, generally will have a UID of 1000 or greater, a home directory in a specific partition, and an interactive shell.
+    Interactive user account, generally will have a UID of {{{ uid_min }}} or greater, a home directory in a specific partition, and an interactive shell.
 
     Obtain the list of interactive user accounts authorized to be on the system from the System Administrator or Information System Security Officer (ISSO) and compare it to the list of local interactive user accounts on the system.
 
