--- a/linux_os/guide/system/accounts/accounts-restrictions/root_logins/accounts_no_uid_except_zero/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-restrictions/root_logins/accounts_no_uid_except_zero/rule.yml
@@ -8,8 +8,8 @@ description: |-
     their UID changed.
     <br />
     If the account is associated with system commands or applications the UID
-    should be changed to one greater than "0" but less than "1000."
-    Otherwise assign a UID greater than "1000" that has not already been
+    should be changed to one greater than "0" but less than "{{{ uid_min }}}."
+    Otherwise assign a UID greater than "{{{ uid_min }}}" that has not already been
     assigned.
 
 rationale: |-
@@ -72,7 +72,7 @@ ocil: |-
 fixtext: |-
     Change the UID of any account on the system, other than root, that has a UID of "0".
     If the account is associated with system commands or applications, the UID
-    should be changed to one greater than "0" but less than "1000". Otherwise,
-    assign a UID of greater than "1000" that has not already been assigned.
+    should be changed to one greater than "0" but less than "{{{ uid_min }}}". Otherwise,
+    assign a UID of greater than "{{{ uid_min }}}" that has not already been assigned.
 
 srg_requirement: 'The root account must be the only account having unrestricted access to the {{{ full_name }}} system.'
