--- a/linux_os/guide/system/accounts/accounts-restrictions/root_logins/no_shelllogin_for_systemaccounts/policy/stig/shared.yml
+++ b/linux_os/guide/system/accounts/accounts-restrictions/root_logins/no_shelllogin_for_systemaccounts/policy/stig/shared.yml
@@ -8,7 +8,7 @@ vuldiscussion: |-
 checktext: |-
     Verify that system accounts must not have an interactive login shell with the following command:
 
-    $ awk -F: '($3&lt;1000){print $1 ":" $3 ":" $7}' /etc/passwd
+    $ awk -F: '($3&lt;{{{ uid_min }}}){print $1 ":" $3 ":" $7}' /etc/passwd
 
     root:0:/bin/bash
     bin:1:/sbin/nologin
