--- a/linux_os/guide/system/accounts/accounts-session/accounts_user_interactive_home_directory_defined/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-session/accounts_user_interactive_home_directory_defined/rule.yml
@@ -40,9 +40,9 @@ ocil_clause: 'users home directory is not defined'
 ocil: |-
     Verify that interactive users on the system have a home directory assigned with the following command:
 
-    <pre>$ sudo awk -F: '($3&gt;=1000)&amp;&amp;($7 !~ /nologin/){print $1, $3, $6}' /etc/passwd</pre>
+    <pre>$ sudo awk -F: '($3&gt;={{{ uid_min }}})&amp;&amp;($7 !~ /nologin/){print $1, $3, $6}' /etc/passwd</pre>
 
-    Inspect the output and verify that all interactive users (normally users with a UID greater than 1000) have a home directory defined.
+    Inspect the output and verify that all interactive users (normally users with a UID greater than {{{ uid_min }}}) have a home directory defined.
 
 fixtext: |-
     Assign home directories to all local interactive users on {{{ full_name }}} that currently do not have a home directory assigned.
