--- a/linux_os/guide/system/accounts/accounts-session/file_groupownership_home_directories/policy/stig/shared.yml
+++ b/linux_os/guide/system/accounts/accounts-session/file_groupownership_home_directories/policy/stig/shared.yml
@@ -12,7 +12,7 @@ checktext: |-
 
     Note: This may miss local interactive users that have been assigned a privileged UID. Evidence of interactive use may be obtained from a number of log files containing system logon information. The returned directory "/home/smithj" is used as an example.
 
-    $ sudo ls -ld $(awk -F: '($3>=1000)&&($7 !~ /nologin/){print $6}' /etc/passwd)
+    $ sudo ls -ld $(awk -F: '($3>={{{ uid_min }}})&&($7 !~ /nologin/){print $6}' /etc/passwd)
 
     drwxr-x--- 2 smithj admin 4096 Jun 5 12:41 smithj
 
