--- a/linux_os/guide/system/accounts/accounts-session/accounts_user_interactive_home_directory_defined/policy/stig/shared.yml
+++ b/linux_os/guide/system/accounts/accounts-session/accounts_user_interactive_home_directory_defined/policy/stig/shared.yml
@@ -13,7 +13,7 @@ checktext: |-
     smithk:x:1000:1000:smithk:/home/smithk:/bin/bash
     throckw:x:1001:1001:throckw:/home/throckw:/bin/bash
 
-    Inspect the output and verify that all interactive users (normally users with a UID greater that 1000) have a home directory defined.
+    Inspect the output and verify that all interactive users (normally users with a UID greater than 1000) have a home directory defined.
 
     If users home directory is not defined, this is a finding.
 
