--- a/linux_os/guide/system/accounts/accounts-session/accounts_user_interactive_home_directory_defined/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-session/accounts_user_interactive_home_directory_defined/rule.yml
@@ -42,7 +42,7 @@ ocil: |-
 
     <pre>$ sudo awk -F: '($3&gt;=1000)&amp;&amp;($7 !~ /nologin/){print $1, $3, $6}' /etc/passwd</pre>
 
-    Inspect the output and verify that all interactive users (normally users with a UID greater that 1000) have a home directory defined.
+    Inspect the output and verify that all interactive users (normally users with a UID greater than 1000) have a home directory defined.
 
 fixtext: |-
     Assign home directories to all local interactive users on {{{ full_name }}} that currently do not have a home directory assigned.
