--- a/shared/templates/mount_option_removable_partitions/bash.template
+++ b/shared/templates/mount_option_removable_partitions/bash.template
@@ -9,6 +9,7 @@ mount_option="{{{ MOUNTOPTION }}}"
 if grep -q $device_regex /etc/fstab ; then
     previous_opts=$(grep $device_regex /etc/fstab | awk '{print $4}')
     sed -i "s|\($device_regex.*$previous_opts\)|\1,$mount_option|" /etc/fstab
+    {{{ bash_systemctl_daemon_reload() }}}
 else
     echo "Not remediating, because there is no record of $var_removable_partition in /etc/fstab" >&2
     return 1
