fix: nobody_uid: use it
git grep -Pl 'awk.*\$3\s*(!|=)=?\s*65534' linux_os shared/macros tests/shared shared/templates | \
    xargs -r sed --follow-symlinks -Ei 's/(\{\{[^}]*awk.*\$3\s*!=?\s*|awk.*\$3\s*==?\s*)65534/\1" ~ nobody_uid ~ "/g'

git grep -Pl 'awk.*\$3\s*(!|=)=\s*65534' linux_os shared/macros shared/templates tests/shared | \
    xargs -r sed --follow-symlinks -Ei 's/(awk.*\$3\s*\!=\s*|awk.*\$3\s*==\s*)65534/\1{{{ nobody_uid }}}/g'

--- a/linux_os/guide/system/accounts/accounts-session/user_umask/accounts_umask_interactive_users/ansible/shared.yml
+++ b/linux_os/guide/system/accounts/accounts-session/user_umask/accounts_umask_interactive_users/ansible/shared.yml
@@ -7,7 +7,7 @@
 - name: Ensure interactive local users are the owners of their respective initialization files
   ansible.builtin.shell:
     cmd: |
-      for dir in $(awk -F':' '{ if ($3 >= {{{ uid_min }}} && $3 != 65534) print $6}' /etc/passwd); do
+      for dir in $(awk -F':' '{ if ($3 >= {{{ uid_min }}} && $3 != {{{ nobody_uid }}}) print $6}' /etc/passwd); do
         for file in $(find $dir -maxdepth 1 -type f -name ".*"); do
           if [ "$(basename $file)" != ".bash_history" ]; then
             sed -i 's/^\([\s]*umask\s*\)/#\1/g' $file
