--- a/linux_os/guide/system/accounts/accounts-session/file_permission_user_init_files/ansible/shared.yml
+++ b/linux_os/guide/system/accounts/accounts-session/file_permission_user_init_files/ansible/shared.yml
@@ -1,4 +1,9 @@
 # platform = multi_platform_all
+# reboot = false
+# strategy = restrict
+# complexity = low
+# disruption = low
+
 {{{ ansible_instantiate_variables("var_user_initialization_files_regex") }}}
 
 
