Add product families

--- a/products/debian10/product.yml
+++ b/products/debian10/product.yml
@@ -2,6 +2,12 @@ product: debian10
 full_name: Debian 10
 type: platform
 
+families:
+  - debian
+  - debian-like
+
+major_version_ordinal: 10
+
 benchmark_id: DEBIAN-10
 benchmark_root: "../../linux_os/guide"
 
