--- a/products/debian11/product.yml
+++ b/products/debian11/product.yml
@@ -2,6 +2,12 @@ product: debian11
 full_name: Debian 11
 type: platform
 
+families:
+  - debian
+  - debian-like
+
+major_version_ordinal: 11
+
 benchmark_id: DEBIAN-11
 benchmark_root: "../../linux_os/guide"
 
