--- a/products/rhel7/product.yml
+++ b/products/rhel7/product.yml
@@ -2,6 +2,12 @@ product: rhel7
 full_name: Red Hat Enterprise Linux 7
 type: platform
 
+families:
+  - rhel
+  - rhel-like
+
+major_version_ordinal: 7
+
 benchmark_id: RHEL-7
 benchmark_root: "../../linux_os/guide"
 
