--- a/products/rhel8/product.yml
+++ b/products/rhel8/product.yml
@@ -2,6 +2,12 @@ product: rhel8
 full_name: Red Hat Enterprise Linux 8
 type: platform
 
+families:
+  - rhel
+  - rhel-like
+
+major_version_ordinal: 8
+
 benchmark_id: RHEL-8
 benchmark_root: "../../linux_os/guide"
 
