--- a/products/rhel9/product.yml
+++ b/products/rhel9/product.yml
@@ -2,6 +2,12 @@ product: rhel9
 full_name: Red Hat Enterprise Linux 9
 type: platform
 
+families:
+  - rhel
+  - rhel-like
+
+major_version_ordinal: 9
+
 benchmark_id: RHEL-9
 benchmark_root: "../../linux_os/guide"
 
