--- a/products/sle12/product.yml
+++ b/products/sle12/product.yml
@@ -2,6 +2,11 @@ product: sle12
 full_name: SUSE Linux Enterprise 12
 type: platform
 
+families:
+  - suse
+
+major_version_ordinal: 12
+
 benchmark_id: SLE-12
 benchmark_root: "../../linux_os/guide"
 
