--- a/products/ubuntu1604/product.yml
+++ b/products/ubuntu1604/product.yml
@@ -2,6 +2,12 @@ product: ubuntu1604
 full_name: "Ubuntu 16.04"
 type: platform
 
+families:
+  - debian-like
+  - ubuntu
+
+major_version_ordinal: 1604
+
 benchmark_id: UBUNTU-XENIAL
 benchmark_root: "../../linux_os/guide"
 
