--- a/products/ubuntu2004/product.yml
+++ b/products/ubuntu2004/product.yml
@@ -2,6 +2,12 @@ product: ubuntu2004
 full_name: "Ubuntu 20.04"
 type: platform
 
+families:
+  - debian-like
+  - ubuntu
+
+major_version_ordinal: 2004
+
 benchmark_id: UBUNTU_20-04
 benchmark_root: "../../linux_os/guide"
 
