--- a/tests/data/product_stability/ol8.yml
+++ b/tests/data/product_stability/ol8.yml
@@ -14,6 +14,9 @@ cpes:
 cpes_root: ../../shared/applicability
 dconf_gdm_dir: local.d
 faillock_path: /var/log/faillock
+families:
+- rhel-like
+- ol
 full_name: Oracle Linux 8
 gid_min: 1000
 groups:
@@ -22,6 +25,7 @@ groups:
 grub2_boot_path: /boot/grub2
 grub2_uefi_boot_path: /boot/efi/EFI/redhat
 init_system: systemd
+major_version_ordinal: 8
 nobody_gid: 65534
 nobody_uid: 65534
 oval_feed_url: https://linux.oracle.com/security/oval/com.oracle.elsa-all.xml.bz2
