--- a/tests/data/product_stability/rhel7.yml
+++ b/tests/data/product_stability/rhel7.yml
@@ -36,6 +36,9 @@ cpes:
 cpes_root: ../../shared/applicability
 dconf_gdm_dir: gdm.d
 faillock_path: /var/run/faillock
+families:
+- rhel
+- rhel-like
 full_name: Red Hat Enterprise Linux 7
 gid_min: 1000
 groups:
@@ -44,6 +47,7 @@ groups:
 grub2_boot_path: /boot/grub2
 grub2_uefi_boot_path: /boot/efi/EFI/redhat
 init_system: systemd
+major_version_ordinal: 7
 nobody_gid: 65534
 nobody_uid: 65534
 oval_feed_url: https://access.redhat.com/security/data/oval/com.redhat.rhsa-RHEL7.xml.bz2
