--- a/tests/data/product_stability/rhel8.yml
+++ b/tests/data/product_stability/rhel8.yml
@@ -64,6 +64,9 @@ cpes:
 cpes_root: ../../shared/applicability
 dconf_gdm_dir: gdm.d
 faillock_path: /var/log/faillock
+families:
+- rhel
+- rhel-like
 full_name: Red Hat Enterprise Linux 8
 gid_min: 1000
 groups:
@@ -72,6 +75,7 @@ groups:
 grub2_boot_path: /boot/grub2
 grub2_uefi_boot_path: /boot/efi/EFI/redhat
 init_system: systemd
+major_version_ordinal: 8
 nobody_gid: 65534
 nobody_uid: 65534
 oval_feed_url: https://access.redhat.com/security/data/oval/com.redhat.rhsa-RHEL8.xml.bz2
