--- a/product_properties/10-grub.yml
+++ b/product_properties/10-grub.yml
@@ -4,19 +4,19 @@ default:
   grub2_uefi_boot_path: "/boot/grub2"
 
 overrides:
-{{% if product in ("rhel7", "ol7", "rhel8", "ol8") %}}
+{{% if "rhel-like" in families and major_version_ordinal <= 8 %}}
   grub2_uefi_boot_path: "/boot/efi/EFI/redhat"
-{{% elif product == "sle12" %}}
+{{% endif %}}
+{{% if "suse" in families and major_version_ordinal <= 12 %}}
   grub2_uefi_boot_path: "/boot/efi/EFI/sles"
-{{% elif "debian" in product %}}
+{{% endif %}}
+{{% if "debian-like" in families %}}
   grub2_boot_path: "/boot/grub"
 {{% endif %}}
-{{% if "ubuntu" in product %}}
-{{% if product <= "ubuntu1804" %}}
-  grub2_boot_path: "/boot/grub"
+{{% if "ubuntu" in families %}}
+{{% if major_version_ordinal <= 1804 %}}
   grub2_uefi_boot_path: "/boot/efi/EFI/ubuntu"
 {{% else %}}
-  grub2_boot_path: "/boot/grub"
   grub2_uefi_boot_path: "/boot/grub"
 {{% endif %}}
 {{% endif %}}
