--- a/products/ol7/product.yml
+++ b/products/ol7/product.yml
@@ -2,6 +2,12 @@ product: ol7
 full_name: Oracle Linux 7
 type: platform
 
+families:
+  - rhel-like
+  - ol
+
+major_version_ordinal: 7
+
 benchmark_id: OL-7
 benchmark_root: "../../linux_os/guide"
 
