--- a/products/ol8/product.yml
+++ b/products/ol8/product.yml
@@ -2,6 +2,12 @@ product: ol8
 full_name: Oracle Linux 8
 type: platform
 
+families:
+  - rhel-like
+  - ol
+
+major_version_ordinal: 8
+
 benchmark_id: OL-8
 benchmark_root: "../../linux_os/guide"
 
