--- a/products/sle15/product.yml
+++ b/products/sle15/product.yml
@@ -2,6 +2,11 @@ product: sle15
 full_name: SUSE Linux Enterprise 15
 type: platform
 
+families:
+  - suse
+
+major_version_ordinal: 15
+
 benchmark_id: SLE-15
 benchmark_root: "../../linux_os/guide"
 
