--- a/products/ubuntu1804/product.yml
+++ b/products/ubuntu1804/product.yml
@@ -2,6 +2,12 @@ product: ubuntu1804
 full_name: "Ubuntu 18.04"
 type: platform
 
+families:
+  - debian-like
+  - ubuntu
+
+major_version_ordinal: 1804
+
 benchmark_id: UBUNTU-BIONIC
 benchmark_root: "../../linux_os/guide"
 
