--- a/products/ubuntu2204/product.yml
+++ b/products/ubuntu2204/product.yml
@@ -2,6 +2,12 @@ product: ubuntu2204
 full_name: "Ubuntu 22.04"
 type: platform
 
+families:
+  - debian-like
+  - ubuntu
+
+major_version_ordinal: 2204
+
 benchmark_id: UBUNTU_22-04
 benchmark_root: "../../linux_os/guide"
 
