--- a/tests/data/product_stability/ol9.yml
+++ b/tests/data/product_stability/ol9.yml
@@ -17,6 +17,9 @@ cpes:
 cpes_root: ../../shared/applicability
 dconf_gdm_dir: gdm.d
 faillock_path: /var/log/faillock
+families:
+- rhel-like
+- ol
 full_name: Oracle Linux 9
 gid_min: 1000
 groups:
@@ -25,6 +28,7 @@ groups:
 grub2_boot_path: /boot/grub2
 grub2_uefi_boot_path: /boot/grub2
 init_system: systemd
+major_version_ordinal: 9
 nobody_gid: 65534
 nobody_uid: 65534
 oval_feed_url: https://linux.oracle.com/security/oval/com.oracle.elsa-all.xml.bz2
