--- a/tests/data/product_stability/rhel9.yml
+++ b/tests/data/product_stability/rhel9.yml
@@ -20,6 +20,9 @@ cpes:
 cpes_root: ../../shared/applicability
 dconf_gdm_dir: distro.d
 faillock_path: /var/log/faillock
+families:
+- rhel
+- rhel-like
 full_name: Red Hat Enterprise Linux 9
 gid_min: 1000
 groups:
@@ -28,6 +31,7 @@ groups:
 grub2_boot_path: /boot/grub2
 grub2_uefi_boot_path: /boot/grub2
 init_system: systemd
+major_version_ordinal: 9
 nobody_gid: 65534
 nobody_uid: 65534
 oval_feed_url: https://access.redhat.com/security/data/oval/com.redhat.rhsa-RHEL9.xml.bz2
