--- a/tests/data/product_stability/sle12.yml
+++ b/tests/data/product_stability/sle12.yml
@@ -18,12 +18,15 @@ cpes:
 cpes_root: ../../shared/applicability
 dconf_gdm_dir: gdm.d
 faillock_path: /var/run/faillock
+families:
+- suse
 full_name: SUSE Linux Enterprise 12
 gid_min: 1000
 groups: {}
 grub2_boot_path: /boot/grub2
 grub2_uefi_boot_path: /boot/efi/EFI/sles
 init_system: systemd
+major_version_ordinal: 12
 nobody_gid: 65534
 nobody_uid: 65534
 oval_feed_url: https://ftp.suse.com/pub/projects/security/oval/suse.linux.enterprise.12.xml
