--- a/tests/data/product_stability/ubuntu1804.yml
+++ b/tests/data/product_stability/ubuntu1804.yml
@@ -14,12 +14,16 @@ cpes:
 cpes_root: ../../shared/applicability
 dconf_gdm_dir: gdm.d
 faillock_path: /var/run/faillock
+families:
+- debian-like
+- ubuntu
 full_name: Ubuntu 18.04
 gid_min: 1000
 groups: {}
 grub2_boot_path: /boot/grub
 grub2_uefi_boot_path: /boot/efi/EFI/ubuntu
 init_system: systemd
+major_version_ordinal: 1804
 nobody_gid: 65534
 nobody_uid: 65534
 pkg_manager: apt_get
