Consolidate grub rules
- Assign the grub helper exec to the product
- Remove most of the references to product names from grub macros
- Substitute literal invocations of e.g. grubby with macros

--- a/product_properties/10-grub.yml
+++ b/product_properties/10-grub.yml
@@ -2,6 +2,7 @@
 default:
   grub2_boot_path: "/boot/grub2"
   grub2_uefi_boot_path: "/boot/grub2"
+  grub_helper_executable: "grubby"
 
 overrides:
 {{% if "rhel-like" in families and major_version_ordinal <= 8 %}}
@@ -9,9 +10,11 @@ overrides:
 {{% endif %}}
 {{% if "suse" in families and major_version_ordinal <= 12 %}}
   grub2_uefi_boot_path: "/boot/efi/EFI/sles"
+  grub_helper_executable: "grub2-mkconfig"
 {{% endif %}}
 {{% if "debian-like" in families %}}
   grub2_boot_path: "/boot/grub"
+  grub_helper_executable: "update-grub"
 {{% endif %}}
 {{% if "ubuntu" in families %}}
 {{% if major_version_ordinal <= 1804 %}}
