--- a/tests/data/product_stability/rhcos4.yml
+++ b/tests/data/product_stability/rhcos4.yml
@@ -21,6 +21,7 @@ groups:
     name: ssh_keys
 grub2_boot_path: /boot/grub2
 grub2_uefi_boot_path: /boot/grub2
+grub_helper_executable: grubby
 init_system: systemd
 nobody_gid: 65534
 nobody_uid: 65534
