--- a/tests/data/product_stability/rhel8.yml
+++ b/tests/data/product_stability/rhel8.yml
@@ -74,6 +74,7 @@ groups:
     name: ssh_keys
 grub2_boot_path: /boot/grub2
 grub2_uefi_boot_path: /boot/efi/EFI/redhat
+grub_helper_executable: grubby
 init_system: systemd
 major_version_ordinal: 8
 nobody_gid: 65534
