--- a/tests/data/product_stability/ubuntu2204.yml
+++ b/tests/data/product_stability/ubuntu2204.yml
@@ -22,6 +22,7 @@ gid_min: 1000
 groups: {}
 grub2_boot_path: /boot/grub
 grub2_uefi_boot_path: /boot/grub
+grub_helper_executable: update-grub
 init_system: systemd
 major_version_ordinal: 2204
 nobody_gid: 65534
