--- a/tests/data/product_stability/ol9.yml
+++ b/tests/data/product_stability/ol9.yml
@@ -27,6 +27,7 @@ groups:
     name: ssh_keys
 grub2_boot_path: /boot/grub2
 grub2_uefi_boot_path: /boot/grub2
+grub_helper_executable: grubby
 init_system: systemd
 major_version_ordinal: 9
 nobody_gid: 65534
