--- a/tests/data/product_stability/sle12.yml
+++ b/tests/data/product_stability/sle12.yml
@@ -25,6 +25,7 @@ gid_min: 1000
 groups: {}
 grub2_boot_path: /boot/grub2
 grub2_uefi_boot_path: /boot/efi/EFI/sles
+grub_helper_executable: grub2-mkconfig
 init_system: systemd
 major_version_ordinal: 12
 nobody_gid: 65534
