Add a sanity test of install_vm.py
This test will check if the install_vm.py script is able to
execute. This test can help prevent problems like
https://github.com/ComplianceAsCode/content/issues/10650

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -352,3 +352,9 @@ if (PY_CMAKELINT)
         COMMAND env "PYTHONPATH=$ENV{PYTHONPATH}" "cmakelint" --config "${CMAKE_SOURCE_DIR}/.cmakelintrc" ${CMAKELINT_FILES}
     )
 endif()
+
+add_test(
+    NAME "install-vm"
+    COMMAND env "PYTHONPATH=$ENV{PYTHONPATH}" "${PYTHON_EXECUTABLE}" "${CMAKE_SOURCE_DIR}/tests/install_vm.py" "--help"
+)
+set_tests_properties("install-vm" PROPERTIES LABELS quick)
